# fortuna

./: .env.example  .gitignore  README.md  SPEC.md  bootstrap.sh  pyproject.toml  requirements.txt
data/exports/: 2026-05-16-prediction.json  2026-06-01-prediction.json  2026-06-16-prediction.json  2026-07-01-prediction.json
data/raw/: draws.checksum  draws.jsonl  known_shifted_dates.json  scrape_log.jsonl
data/reports/: backtest-10.json  journal-2026-05-16.md  phase1-eda.md  phase1-retro.md
fortuna/: __init__.py  __main__.py  cli.py  config.py  parser.py  schema.py  scraper.py  store.py  validator.py
fortuna/data/: __init__.py  parser.py  scraper.py  store.py  validator.py
fortuna/eval/: __init__.py  leaderboard.py  metrics.py  stats.py  walkforward.py
fortuna/evolution/: __init__.py  breeding.py  ga.py  graveyard.py  optuna_search.py
fortuna/features/: base.py  library.py  proposer.py  registry.py
fortuna/models/: __init__.py  base.py  ensemble.py  frequency.py  frequency_bayesian.py  lstm.py  markov.py  meta.py  meta_stacker.py  neural.py  rl.py  rl_qlearn.py
fortuna/pipeline/: __init__.py  (+8 more)
models/: graveyard.json  registry.json
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_walkforward_cv.ipynb
scripts/: backfill.py  backtest_10.py  backtest_532.py  check_phase2.py  eda.py  install_cron.sh  migrate_add_notion_page_id.py  run_breeding.sh  run_draw_day.sh
tests/: conftest.py  create_fixtures.py  test_metrics.py  test_notion_publisher.py  test_parser.py  test_picker.py  test_predict_pipeline.py  test_store_dedup.py  test_walkforward_no_leakage.py
(+10 files in other folders)
