[project]
name = "fortuna"
version = "0.1.0"
description = "Self-learning AI ensemble for Thai Government Lottery — personal ML lab"
requires-python = ">=3.11,<3.13"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["fortuna"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
